<resources>
    <string name="app_name">TicTacToe</string>
    <string name="back_image_view">Back image view</string>
    <string name="win_mark">win_mark</string>
    <string name="cell_btn_0">cell_btn_0</string>
    <string name="cell_btn_1">cell_btn_1</string>
    <string name="cell_btn_2">cell_btn_2</string>
    <string name="cell_btn_3">cell_btn_3</string>
    <string name="cell_btn_4">cell_btn_4</string>
    <string name="cell_btn_5">cell_btn_5</string>
    <string name="cell_btn_6">cell_btn_6</string>
    <string name="cell_btn_7">cell_btn_7</string>
    <string name="cell_btn_8">cell_btn_8</string>
    <string name="reset_btn">reset_btn</string>
    <string name="status_btn">status_btn</string>
    <string name="play_again">Play Again</string>


</resources>